@@ -23,6 +23,14 @@ public class PokedexController {
     public PokedexController(PokedexView view) {
         this.view = view;
 
+        view.searchBox.searchField.textProperty().addListener((observable, oldValue, newValue) -> {
+            previewPokemonFromSearchBox(newValue);
+
+            if (newValue.isEmpty()) {
+                displayLeftPreview(null);
+            }
+        });
+
         view.searchBox.catchButton.setOnAction(e -> loadFromApi());
 
         view.capturedListView.listView.getSelectionModel().selectedItemProperty().addListener(
@@ -41,9 +49,7 @@ public class PokedexController {
                                 break;
                             }
                         }
-                    } catch (SQLException ex) {
-                        throw new RuntimeException(ex);
-                    } catch (Exception e) {
+                    }  catch (Exception e) {
                         throw new RuntimeException(e);
                     }
                 }
@@ -70,13 +76,14 @@ public class PokedexController {
             }
         });
 
-        // To see the preview of the pokemon before catching it.
-        view.searchBox.searchField.textProperty().addListener((observable, oldValue, newValue) -> {
-            previewPokemonFromSearchBox(newValue);
-            if (newValue == null || newValue.isEmpty()) {
-                displayLeftPreview(null);
-            }
-        });
+        // Captured count label update
+        try {
+            int capturedCount = pokemonDAO.lister().size();
+            view.capturedCountLabel.setText("Captured: " + capturedCount);
+        }
+        catch (SQLException ex) {
+            showErrorPopup("Not able to load Pokemon list.");
+        }
     }
 
     /**
@@ -92,9 +99,9 @@ public class PokedexController {
         alert.showAndWait();
     }
     /**
-     * Displays a confirmation dialog before deleting a Pokemon.
+     * Displays a confirmation dialog before deleting a Pokémon.
      *
-     * @param pokemonName The name of the Pokemon to delete.
+     * @param pokemonName The name of the Pokémon to delete.
      * @return true if the user confirms the deletion, false otherwise.
      */
     private boolean confirmDeletePopUp(String pokemonName) {
@@ -139,9 +146,9 @@ public class PokedexController {
     }
 
     /**
-     * Deletes a Pokemon from the database by its name.
+     * Deletes a Pokémon from the database by its name.
      *
-     * @param name The name of the Pokemon to delete.
+     * @param name The name of the Pokémon to delete.
      */
     private void deletePokemon(String name) {
         // TODO: Add confirmation dialog before deletion
@@ -154,16 +161,14 @@ public class PokedexController {
                     break;
                 }
             }
-        } catch (SQLException ex) {
-            throw new RuntimeException(ex);
-        } catch (Exception e) {
+        }  catch (Exception e) {
             throw new RuntimeException(e);
         }
         refreshList();
     }
 
     /**
-     * Refreshes the list view of captured Pokemon in the PokedexView.
+     * Refreshes the list view of captured Pokémon in the PokedexView.
      * Clears the current items in the list view and repopulates it with the latest data from the database.
      */
     private void refreshList() {
@@ -178,6 +183,16 @@ public class PokedexController {
             // TODO: Display error on screen instead of printing to console
             System.err.println("Error loading Pokemon: " + e.getMessage());
         }
+        refreshCapturedCount();
+    }
+
+    private void refreshCapturedCount() {
+        try {
+            int capturedCount = pokemonDAO.lister().size();
+            view.capturedCountLabel.setText("Captured: " + capturedCount);
+        } catch (SQLException ex) {
+            showErrorPopup("Not able to load Pokemon list.");
+        }
     }
 
     public void start() {
@@ -185,9 +200,9 @@ public class PokedexController {
     }
 
     /**
-     * Displays the details of a Pokemon in the PokedexView.
+     * Displays the details of a Pokémon in the PokedexView.
      *
-     * @param pokemon The Pokemon object containing the details to display.
+     * @param pokemon The Pokémon object containing the details to display.
      */
     private void displayCardPokedex(Pokemon pokemon, List<PokemonTypes> pokemonTypes) throws Exception {
         // Update the view with the Pokemon data
@@ -206,8 +221,8 @@ public class PokedexController {
             view.filterView.id = pokemon.id;
             // types
             // TODO: ----
-            if (pokemonTypes.size() >= 1) {
-                Type typeOne = service.recupererType(pokemonTypes.get(0).type_id);
+            if (!pokemonTypes.isEmpty()) {
+                Type typeOne = service.recupererType(pokemonTypes.getFirst().type_id);
                 view.filterView.typesView.typeOne.setText(typeOne.name);
                 view.filterView.typesView.typeOne.getStyleClass().clear();
                 view.filterView.typesView.typeOne.getStyleClass().add(typeOne.name);
@@ -239,9 +254,9 @@ public class PokedexController {
     }
 
     /**
-     * Displays a preview of the Pokemon before catch on the left side of the PokedexView.
+     * Displays a preview of the Pokémon before catch on the left side of the PokedexView.
      *
-     * @param pokemon The Pokemon object containing the details to preview.
+     * @param pokemon The Pokémon object containing the details to preview.
      */
     private void displayLeftPreview(Pokemon pokemon) {
         if (pokemon != null) {
@@ -265,9 +280,9 @@ public class PokedexController {
     }
 
     /**
-     * Previews a Pokemon based on the text entered in the search box.
+     * Previews a Pokémon based on the text entered in the search box.
      * If the text is empty, it does nothing. If the text can be parsed as an integer,
-     * it attempts to retrieve the Pokemon with that ID from the API and display its preview.
+     * it attempts to retrieve the Pokémon with that ID from the API and display its preview.
      *
      * @param text The text entered in the search box.
      */
